# ml_engineering_labs

./: .gitignore  README.md  dataset_registry.csv  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
configs/: base.yaml  lab02.yaml  lab04.yaml  lab05.yaml
dashboard/: app.py  config.yaml
dashboard/utils/: __init__.py  config.py  data_utils.py  mlflow_utils.py  model_utils.py  viz_utils.py
docs/: lab_report_01.md  lab_report_02.md  lab_report_03.md  lab_report_04.md  lab_report_05.md  lab_report_06.md
notebooks/: ml_engineering_lab_01.ipynb  ml_engineering_lab_02.ipynb  ml_engineering_lab_03.ipynb  ml_engineering_lab_04.ipynb  ml_engineering_lab_05.ipynb  ml_engineering_lab_06.ipynb
outputs/: metrics.json
scripts/: download_data.py  evaluate.py  setup_mlflow.py  take_screenshots.py  train.py
src/models/: __init__.py  cnn.py
src/training/: __init__.py  evaluate.py  mlflow_trainer.py  trainer.py  wandb_trainer.py
