[project]
name = "ml-engineering-labs"
version = "0.1.0"
description = "Training pipeline for deep learning model"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "tqdm>=4.64",
    "matplotlib>=3.6",
    "numpy>=1.22",
    "pyyaml>=6.0",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.0",
    "Pillow>=9.0",
    "wandb>=0.27.0",
]

[tool.poetry]
name = "lab_1_example"
description = "Training pipeline for deep learning model"
authors = ["Dmytro Kazakov <Dmytro.Kazakov@cs.khpi.edu.ua>"]
version = "0.01"

[tool.poetry.dependencies]
python = "~3.12"
torch = ">=2.0"
torchvision = ">=0.15"
tqdm = ">=4.64"
matplotlib = ">=3.6"
numpy = ">=1.22"
pyyaml = ">=6.0"
scipy = ">=1.10"
pandas = ">=2.0"
scikit-learn = ">=1.0"
Pillow = ">=9.0"
mlflow = ">=2.0"

[tool.poetry.dev-dependencies]
mypy = ">=0.991"
ruff = ">=0.0.254"
black = ">=23.1.0"
isort = ">=5.12.0"

[tool.uv]
package = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "dvc>=3.67.1",
    "ipykernel>=7.2.0",
    "mlflow>=3.12.0",
    "nbconvert>=7.17.1",
    "mypy>=0.991",
    "ruff>=0.0.254",
    "black>=23.1.0",
    "isort>=5.12.0",
]
